unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/MTD_User_Count__c.field-meta.xml
<CustomField>
    <fullName>MTD_User_Count__c</fullName>
    <label>MTD User Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>