unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/NCM_axcessa_Revenue__c.field-meta.xml
<CustomField>
    <fullName>NCM_axcessa_Revenue__c</fullName>
    <formula>Monthly_Fee__c *(0.3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCM aXcessa Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>