unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/NCM_Billing_Start__c.field-meta.xml
<CustomField>
    <fullName>NCM_Billing_Start__c</fullName>
    <inlineHelpText>Month NCM will begin billing client - typically 1 month after Reynolds Billing Start date.</inlineHelpText>
    <label>NCM Billing Start</label>
    <type>Date</type>
</CustomField>