unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Need_to_Recalculate_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Need_to_Recalculate_Metrics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need to Recalculate Metrics?</label>
    <type>Checkbox</type>
</CustomField>