unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>axcessa_Platform_Engagements3</relationshipName>
    <type>Lookup</type>
</CustomField>