unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Parent_Instance__c.field-meta.xml
<CustomField>
    <fullName>Parent_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This store is sharing an aXcessa instance with a store identified in this field.</inlineHelpText>
    <label>Parent Instance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.axcessa_Group__c</field>
            <operation>equals</operation>
            <valueField>$Source.axcessa_Group__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>axcessa_Platform_Engagement__c</referenceTo>
    <relationshipLabel>aXcessa Stores</relationshipLabel>
    <relationshipName>aXcessa_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>