unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Program_Start__c.field-meta.xml
<CustomField>
    <fullName>Program_Start__c</fullName>
    <inlineHelpText>Date axcessa customer goes live</inlineHelpText>
    <label>Program Start</label>
    <type>Date</type>
</CustomField>