unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reconciliation_Absolute__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Absolute__c</fullName>
    <formula>ABS( Reynolds_Invoice_Reconciliation__c )</formula>
    <label>Reconciliation Absolute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>