unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Red_Flag_Exception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag_Exception_Notes__c</fullName>
    <inlineHelpText>If the store is red flagged, but CES rep has a reason for NOT engaging directly with the client. Updating this notes field will update the Red Flag Exception Update with today&#39;s date.</inlineHelpText>
    <label>Red Flag Exception Notes</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>