unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Red_Flag_Exception_Update__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag_Exception_Update__c</fullName>
    <inlineHelpText>Last date the Red Flag Exception Notes was updated.</inlineHelpText>
    <label>Red Flag Exception Update</label>
    <type>Date</type>
</CustomField>