unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Remaining_term__c.field-meta.xml
<CustomField>
    <fullName>Remaining_term__c</fullName>
    <formula>Contract_Expiration_Date__c  -  TODAY()</formula>
    <label>Days till Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>