unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Report_Count_10__c.field-meta.xml
<CustomField>
    <fullName>Report_Count_10__c</fullName>
    <description>Rolling 12 Month Report Count</description>
    <label>Report Count 10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>