unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Report_Count_11__c.field-meta.xml
<CustomField>
    <fullName>Report_Count_11__c</fullName>
    <description>Rolling 12 Month Report Count</description>
    <label>Report Count 11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>