unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Report_Count_12__c.field-meta.xml
<CustomField>
    <fullName>Report_Count_12__c</fullName>
    <description>Rolling 12 Month Report Count</description>
    <label>Report Count 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>