unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Report_Usage_Change__c.field-meta.xml
<CustomField>
    <fullName>Report_Usage_Change__c</fullName>
    <formula>IF(
    Last_2_Month_Report_Count__c &gt; 0,
    ( Last_Month_Report_Count__c - Last_2_Month_Report_Count__c ) / Last_2_Month_Report_Count__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Usage Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>