unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Report_Usage_Change_Code__c.field-meta.xml
<CustomField>
    <fullName>Report_Usage_Change_Code__c</fullName>
    <formula>IF( 
    Report_Usage_Change__c &lt; (-0.25),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Usage Change Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>