unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Report_Usage_Rating__c.field-meta.xml
<CustomField>
    <fullName>Report_Usage_Rating__c</fullName>
    <formula>if(  Last_Month_Report_Count__c  &gt; 999, &quot;Power User&quot;,

if(Last_Month_Report_Count__c  &gt; 499,&quot;Average&quot;,

if(Last_Month_Report_Count__c  &lt; 500,&quot;Red Flag&quot;,&quot;No Data&quot;

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Power User	-	1000
Average	-	500-999
Red Flag	-	under 500</inlineHelpText>
    <label>Report Usage Rating</label>
    <type>Text</type>
</CustomField>