unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Report_Usage_Rating_Code__c.field-meta.xml
<CustomField>
    <fullName>Report_Usage_Rating_Code__c</fullName>
    <description>Used to calculate Client Rating</description>
    <formula>if(Report_Usage_Rating__c = &quot;Red Flag&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Usage Rating Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>