unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_axcessa_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_axcessa_Group_Id__c</fullName>
    <label>Reynolds aXcessa Group Id (Code)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>