unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Billing_Information_Update__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Billing_Information_Update__c</fullName>
    <inlineHelpText>Date when Reynolds Billing Data was last updated</inlineHelpText>
    <label>Reynolds Billing Information Update</label>
    <type>Date</type>
</CustomField>