unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Billing_Start__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Billing_Start__c</fullName>
    <inlineHelpText>Date Reynolds begins billing client</inlineHelpText>
    <label>Reynolds Billing Start</label>
    <type>Date</type>
</CustomField>