unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Billing_Stop__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Billing_Stop__c</fullName>
    <inlineHelpText>Date Reynolds indicates billing will stop. This is not necessarily the same as the Reynolds Cancel Date</inlineHelpText>
    <label>Reynolds Billing Stop</label>
    <type>Date</type>
</CustomField>