unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Cancel_Date__c</fullName>
    <inlineHelpText>Date Rey Rey has posted customer cancellation.</inlineHelpText>
    <label>Reynolds Cancel Date</label>
    <type>Date</type>
</CustomField>