unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Cancelation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Cancelation_Notes__c</fullName>
    <inlineHelpText>Reynolds Notes pertaining to a store Cancelation. Also a write back from the Cancelation Docusign.</inlineHelpText>
    <label>Reynolds Cancelation Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>