unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_City__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_City__c</fullName>
    <inlineHelpText>City Reynolds &amp; Reynolds has on file</inlineHelpText>
    <label>Reynolds City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>