unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Contact__c</fullName>
    <label>Reynolds Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>