unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Contact_Email__c</fullName>
    <label>Reynolds Contact Email</label>
    <type>Email</type>
</CustomField>