unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Contact_Phone__c</fullName>
    <label>Reynolds Contact Phone</label>
    <type>Phone</type>
</CustomField>