unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Customer_ID_CIF__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Customer_ID_CIF__c</fullName>
    <description>RR unique customer (store) ID</description>
    <inlineHelpText>RR unique customer (store) ID</inlineHelpText>
    <label>Reynolds Customer ID (CIF)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>