unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Invoice_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Invoice_Reconciliation__c</fullName>
    <formula>Reynolds_Total_Amount__c  - Active_Billing_Product_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reynolds Invoice Reconciliation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>