unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Invoiced_to_NCM__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Invoiced_to_NCM__c</fullName>
    <inlineHelpText>Amount Reynolds will invoice       Total -    (NCM (Total-DRF)*.30)</inlineHelpText>
    <label>Reynolds Invoiced to NCM</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>