unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reynolds provisioning indicates this store has mobile.</inlineHelpText>
    <label>Reynolds Mobile?</label>
    <type>Checkbox</type>
</CustomField>