unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Price_Increase__c</fullName>
    <inlineHelpText>Date Reynolds plans to increase the price to the client</inlineHelpText>
    <label>Reynolds Price Increase</label>
    <type>Date</type>
</CustomField>