unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Price_Increase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Price_Increase_Amount__c</fullName>
    <inlineHelpText>New price after Reynolds price increase</inlineHelpText>
    <label>Reynolds Price Increase Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>