unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Setup_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Setup_Notes__c</fullName>
    <inlineHelpText>Reynolds operations notes</inlineHelpText>
    <label>Reynolds Setup Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>