unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Setup_Status__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Setup_Status__c</fullName>
    <inlineHelpText>Reynolds &amp; Reynolds store status</inlineHelpText>
    <label>Reynolds Setup Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>