unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_State__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_State__c</fullName>
    <inlineHelpText>State/Province Reynolds &amp; Reynolds has on file</inlineHelpText>
    <label>Reynolds State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>