unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Store_ID__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Store_ID__c</fullName>
    <description>RR store internal store ID</description>
    <inlineHelpText>RR store internal store ID</inlineHelpText>
    <label>Reynolds Store ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>