unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Store_Installed__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Store_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Rey Rey has marked this store as installed.</description>
    <inlineHelpText>Indicates that Rey Rey has marked this store as installed.</inlineHelpText>
    <label>Reynolds Store Installed?</label>
    <type>Checkbox</type>
</CustomField>