unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Store_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Store_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This indicates whether or not Rey Rey has this store marked as active.</inlineHelpText>
    <label>Reynolds Store Is Active?</label>
    <type>Checkbox</type>
</CustomField>