unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Store_Name__c</fullName>
    <inlineHelpText>Name Reynolds uses for this store</inlineHelpText>
    <label>Reynolds Store Name</label>
    <type>TextArea</type>
</CustomField>