unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Reynolds_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Total_Amount__c</fullName>
    <formula>Monthly_Fee__c +  DR_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reynolds Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>