unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Sales_Handoff_Complete__c.field-meta.xml
<CustomField>
    <fullName>Sales_Handoff_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when the customer handoff is complete. The Handoff Complete Date field will then populate with the date this box was checked.</inlineHelpText>
    <label>Sales Hand-off Complete</label>
    <type>Checkbox</type>
</CustomField>