unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Sales_Handoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Handoff_Date__c</fullName>
    <inlineHelpText>Date the aXcessa salesperson and SES completed customer handoff after Training is complete</inlineHelpText>
    <label>Sales Hand-off Date</label>
    <type>Date</type>
</CustomField>