unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Send_Disconnect_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Disconnect_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Disconnect Notification?</label>
    <type>Checkbox</type>
</CustomField>