unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/SES_Assigned__c.field-meta.xml
<CustomField>
    <fullName>SES_Assigned__c</fullName>
    <label>SES Assigned</label>
    <type>Date</type>
</CustomField>