unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Setup_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Paid__c</fullName>
    <description>&quot;Setup fee from sales process - similar to CIP - if CC form filled out on reg form then immediately checked otherwise this is a follow up to Rey Rey
&quot;</description>
    <inlineHelpText>Setup fee from sales process - similar to CIP - if CC form filled out on reg form then immediately checked otherwise this is a follow up to Rey Rey</inlineHelpText>
    <label>Setup Fee Paid</label>
    <type>Date</type>
</CustomField>