unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Store_Status__c.field-meta.xml
<CustomField>
    <fullName>Store_Status__c</fullName>
    <formula>IF( 
    AND(Disconnected_Program__c &gt; TODAY(),Disconnected_Program__c &lt; (Today()+45)),


       &quot;Disconnecting&quot;,
         
      


    IF( 
        Disconnected_Program__c &lt;= TODAY(), 
        &quot;Inactive&quot;,
        IF(
            OR(
                Training_Complete__c &gt; TODAY(),
                ISBLANK( Training_Complete__c )
            ),
            &quot;Provisioning&quot;,
            IF(
                NOT( ISBLANK( Parent_Instance__c ) ),
                &quot;Shared Instance&quot;,
                &quot;Active&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Status</label>
    <type>Text</type>
</CustomField>