unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <formula>if( (TODAY()-  Program_Start__c)  &gt; (365), &quot;Power User&quot;,if((TODAY()-  Program_Start__c)  &gt; (180) ,&quot;Average&quot;,if((TODAY()-  Program_Start__c) &lt; (180) ,&quot;Red Flag&quot;,&quot;No Data&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Power User	-	12+ months
Average	-	7 - 12 months
Red Flag	-	under 6 months</inlineHelpText>
    <label>Tenure</label>
    <type>Text</type>
</CustomField>