unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Tenure_Code__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Code__c</fullName>
    <formula>if( Tenure__c = &quot;Red Flag&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenure Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>