unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>Training_Complete__c</fullName>
    <inlineHelpText>Date training was completed</inlineHelpText>
    <label>Training Complete</label>
    <type>Date</type>
</CustomField>