unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Ultimate_Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account_Id__c</fullName>
    <label>Ultimate Parent Account Id (Code)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>