unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/Written_Notice__c.field-meta.xml
<CustomField>
    <fullName>Written_Notice__c</fullName>
    <label>Written Notice</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>