unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/X3__c.field-meta.xml
<CustomField>
    <fullName>X3__c</fullName>
    <inlineHelpText>Days between Opportunity Closed Date and Hand-Off Complete Date</inlineHelpText>
    <label>Days to Hand-Off Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>