unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/YTD_AVG_Report_Count__c.field-meta.xml
<CustomField>
    <fullName>YTD_AVG_Report_Count__c</fullName>
    <label>YTD AVG Report Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>