unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/YTD_AVG_Report_Count_del__c.field-meta.xml
<CustomField>
    <fullName>YTD_AVG_Report_Count_del__c</fullName>
    <inlineHelpText>Reynolds &amp; Reynolds average report count year to date</inlineHelpText>
    <label>YTD AVG Report Count</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>