unpackaged/main/default/objects/axcessa_Platform_Engagement__c/fields/YTD_AVG_User_Count__c.field-meta.xml
<CustomField>
    <fullName>YTD_AVG_User_Count__c</fullName>
    <label>YTD AVG User Count</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>