unpackaged/main/default/objects/axcessa_Platform_Engagement__c/recordTypes/axcessa.recordType-meta.xml
<RecordType>
    <fullName>axcessa</fullName>
    <active>true</active>
    <label>axcessa</label>
</RecordType>