unpackaged/main/default/objects/axcessa_Platform_Engagement__c/listViews/Active_Stores.listView-meta.xml
<ListView>
    <fullName>Active_Stores</fullName>
    <columns>NAME</columns>
    <columns>axcessa_Group__c</columns>
    <columns>Account__c</columns>
    <columns>Billing_Account__c</columns>
    <columns>Owner__c</columns>
    <columns>axcessa_Engagement_Specialist__c</columns>
    <columns>Program_Start__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Store_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Stores</label>
</ListView>