unpackaged/main/default/objects/axcessa_Platform_Engagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>axcessa_Group__c</columns>
    <columns>Account__c</columns>
    <columns>Store_Status__c</columns>
    <columns>Billing_Account__c</columns>
    <columns>Program_Start__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>