unpackaged/main/default/objects/axcessa_Platform_Engagement__c/listViews/New_Stores.listView-meta.xml
<ListView>
    <fullName>New_Stores</fullName>
    <columns>NAME</columns>
    <columns>axcessa_Engagement_Specialist__c</columns>
    <columns>axcessa_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>New Stores</label>
</ListView>